kustomize/004-traefik-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: traefik
  annotations:
    cert-manager.io/issuer: letsencrypt-prod-issuer
spec:
  gatewayClassName: traefik
  listeners:
    # wordpress
    - name: wordpress-http
      hostname: ${WORDPRESS_DUCKDNS_DOMAIN}
      port: 8000 # must match exposed port in traefik chart
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: wordpress-https
      hostname: ${WORDPRESS_DUCKDNS_DOMAIN}
      port: 8443 # must match exposed port in traefik chart
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wordpresss-prod-tls

    # pdf-generator
    - name: pdf-generator-http
      hostname: ${PDF_GENERATOR_DUCKDNS_DOMAIN}
      port: 8000 # must match exposed port in traefik chart
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: pdf-generator-https
      hostname: ${PDF_GENERATOR_DUCKDNS_DOMAIN}
      port: 8443 # must match exposed port in traefik chart
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: pdf-generator-prod-tls
